Fix #5716 "Long input field truncated in PDF file"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-base.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-base.less
@@ -448,6 +448,8 @@
             cursor: not-allowed;
 
             overflow-wrap: break-word;
+            // https://github.com/orbeon/orbeon-forms/issues/5716
+            word-wrap: break-word; // keep also `word-wrap`, even if it's deprecated in favor of `overflow-wrap`, for the PDF renderer
             word-break: normal;             // Bootstrap overrides word-break (`word-break` is generally used for for CJK)
 
             min-height: @controlsHeight;
@@ -479,6 +481,8 @@
         .xbl-fr-tinymce .xforms-output.xforms-mediatype-text-html > .xforms-output-output pre {
             white-space: normal;
             overflow-wrap: break-word;
+            // https://github.com/orbeon/orbeon-forms/issues/5716
+            word-wrap: break-word; // keep also `word-wrap`, even if it's deprecated in favor of `overflow-wrap`, for the PDF renderer
         }
     }
 }
